# deflox

./: .env_sample  CHANGES.md  README.md  environment.yml  pyproject.toml  version.py
.github/workflows/: ingestion-workflow.yaml
deflox/ingestion/: __init__.py  data_fetcher.py  flox_data_reader.py  ingest.py
docker/: Dockerfile
ingestion/: fetch_data.py  flox_data_reader.py  ingest.py  version.py
notebooks/: inspect_sample_data_2.ipynb  prepare_database.ipynb
test/: data_fetcher_test.py  flox_data_reader_test.py  test_data_fetcher.py  test_flox_data_reader.py
test/ingestion/: test_data_fetcher.py  test_flox_data_reader.py
test/ingestion/res/: Incoming_radiance_FLUO_070003.csv  Incoming_radiance_FULL_F070003.csv  Reflectance_FLUO_070003.csv  Reflectance_FULL_F070003.csv  Reflected_radiance_FLUO_070003.csv  Reflected_radiance_FULL_F070003.csv
test/ingestion/res/240101/: 070101.CSV
test/ingestion/res/240102/: 070102.CSV
test/res/: LOG.CSV
