[build-system]
requires = [
    "setuptools >= 40.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "deflox"
dynamic = ["version"]
authors = [
    {name = "Thomas Storm", email = "thomas.storm@brockmann-consult.de"}
]
description = """\
  Scripts supporting the DEFLOX project \
  """
keywords = [
    "ingestion", "processing"
]
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    #todo
]

[tool.setuptools.dynamic]
version = {attr = "deflox.__version__"}

[tool.setuptools.packages.find]
exclude = [
    "test*",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
]
doc = [
]

[project.urls]
Issues = "https://github.com/bc-org/deflox/issues"
Changelog = "https://github.com/bc-org/deflox/blob/main/CHANGES.md"
Repository = "https://github.com/bc-org/deflox"
